--- a/src/app/navBar/navBar.html
+++ b/src/app/navBar/navBar.html
@@ -1,17 +1,37 @@
-<nav class="navbar navbar-fixed-top navbar-dark bg-red">
-	<a class="navbar-brand" href="#">Activate Good</a>
-	<ul class="nav navbar-nav">
-	<li class="nav-item active">
-		<a class="nav-link" href="#">Opportunities <span class="sr-only">(current)</span></a>
-	</li>
-	<li class="nav-item">
-		<a class="nav-link" href="#">Nonprofits</a>
-	</li>
-	<li class="nav-item">
-		<a class="nav-link" href="#">Groups</a>
-	</li>
-	<li class="nav-item">
-		<a class="nav-link" href="#">Account</a>
-	</li>
+<nav class="navbar ag-navbar navbar-dark bg-inverse m-b-1">
+	<ul class="nav navbar-nav ag-nav" ng-if="!searchVisible">
+		<li class="nav-item">
+			<a href="#" class="nav-link" ng-click="toggleSearch()">
+				<i class="fa fa-search"></i>
+			</a>
+		</li>
+		<li class="nav-item active">
+			<a class="nav-link" href="#">Featured</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="#">Poverty</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="#">Environment</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="#">Community</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="#">Education</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="#">Arts &amp; Culture</a>
+		</li>
 	</ul>
+	<form ng-if="searchVisible">
+		<div class="input-group">
+			<input class="form-control" type="text" placeholder="Search for a volunteer opportunity.">
+			<a href="#" class="text-muted">
+				<div class="input-group-addon" ng-click="toggleSearch()">
+					<i class="fa fa-times"></i>
+				</div>
+			</a>
+		</div>
+	</form>
 </nav>
