--- a/src/app/opportunities/oppList.html
+++ b/src/app/opportunities/oppList.html
@@ -1,3 +1,5 @@
-<div ng-repeat="opp in opps">
-	<ag-opp-card opp="opp"></ag-opp-card>
+<div class="row">
+	<div class="col-xs-12" ng-repeat="opp in opps">
+		<ag-opp-card opp="opp"></ag-opp-card>
+	</div>
 </div>
