--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,55 +1,7 @@
 @import "variables.scss";
 
-
-// Core variables and mixins
-@import "../vendor/bootstrap/scss/variables";
-@import "../vendor/bootstrap/scss/mixins";
-
-// Reset and dependencies
-@import "../vendor/bootstrap/scss/normalize";
-@import "../vendor/bootstrap/scss/print";
-
-// Core CSS
-@import "../vendor/bootstrap/scss/reboot";
-@import "../vendor/bootstrap/scss/type";
-@import "../vendor/bootstrap/scss/images";
-@import "../vendor/bootstrap/scss/code";
-@import "../vendor/bootstrap/scss/grid";
-@import "../vendor/bootstrap/scss/tables";
-@import "../vendor/bootstrap/scss/forms";
-@import "../vendor/bootstrap/scss/buttons";
-
-// Components
-@import "../vendor/bootstrap/scss/animation";
-@import "../vendor/bootstrap/scss/dropdown";
-@import "../vendor/bootstrap/scss/button-group";
-@import "../vendor/bootstrap/scss/input-group";
-@import "../vendor/bootstrap/scss/custom-forms";
-@import "../vendor/bootstrap/scss/nav";
-@import "../vendor/bootstrap/scss/navbar";
-@import "../vendor/bootstrap/scss/card";
-@import "../vendor/bootstrap/scss/breadcrumb";
-@import "../vendor/bootstrap/scss/pagination";
-@import "../vendor/bootstrap/scss/pager";
-@import "../vendor/bootstrap/scss/labels";
-@import "../vendor/bootstrap/scss/jumbotron";
-@import "../vendor/bootstrap/scss/alert";
-@import "../vendor/bootstrap/scss/progress";
-@import "../vendor/bootstrap/scss/media";
-@import "../vendor/bootstrap/scss/list-group";
-@import "../vendor/bootstrap/scss/responsive-embed";
-@import "../vendor/bootstrap/scss/close";
-
-// Utility classes
-@import "../vendor/bootstrap/scss/utilities";
-@import "../vendor/bootstrap/scss/utilities-background";
-@import "../vendor/bootstrap/scss/utilities-spacing";
-@import "../vendor/bootstrap/scss/utilities-responsive";
-
-body { 
-	padding-top: 70px;
-}
-
+@import "../vendor/bootstrap/scss/bootstrap";
+@import "../vendor/font-awesome/scss/font-awesome";
 
 // Mixins
 @include bg-variant('.bg-dark-green', $ag-dark-green);
@@ -58,3 +10,31 @@ body {
 @include bg-variant('.bg-light-blue', $ag-light-blue);
 @include bg-variant('.bg-red', $ag-red);
 @include bg-variant('.bg-orange', $ag-orange);
+
+.ag-jumbotron {
+	@include gradient-vertical($gray-light, $ag-dark-blue, 0%, 100%)
+	color: #fff;
+}
+
+.ag-navbar {
+
+    text-align: center;
+
+	.ag-nav {
+	    display:inline-block;
+	    float: none;
+	    vertical-align: top;
+
+		.nav-item {
+			@extend .m-l-3;
+			@extend .m-r-3;
+		}
+	}
+
+	.input-group-addon {
+		line-height: 1.5;
+		border-top-right-radius: $input-border-radius;
+		border-bottom-right-radius: $input-border-radius;
+	}
+
+}
