--- a/src/app/opportunities/oppList.html
+++ b/src/app/opportunities/oppList.html
@@ -1,5 +1,7 @@
 <div class="row">
-	<div class="col-xs-12" ng-repeat="opp in opps">
-		<ag-opp-card opp="opp"></ag-opp-card>
+	<div class="col-xs-12">
+		<div class="card-columns">
+			<ag-opp-card opp="opp" ng-repeat="opp in opps"></ag-opp-card>
+		</div>
 	</div>
 </div>
