--- a/src/app/opportunities/oppCard.html
+++ b/src/app/opportunities/oppCard.html
@@ -1,11 +1,13 @@
 <div class="card">
-	<div class="card-block p-b-1">
-		<img class="pull-xs-left img-circle m-r-1" src="http://lorempixel.com/50/50/people/{{opp.id}}" alt="{{opp.title}}">
+	<div class="card-block">
 		<h4 class="card-title" ng-bind="opp.title"></h4>
 		<h6 class="card-subtitle text-muted" ng-bind="opp.nonprofit.name"></h6>	
 	</div>
-	<div class="card-block p-t-0">
+	<img ng-if="opp.image" class="img-fluid" src="{{opp.image.url}}" alt="{{opp.title}}">
+	<div class="card-block">
 		<p class="card-text" ng-bind="opp.abstract"></p>		
 		<button type="button" class="btn btn-primary btn-sm">Sign Up</button>
+		<span class="card-text m-l-1" ng-bind="opp.volunteersNeeded"></span>
+		<span class="card-text"> volunteers needed!</span>
 	</div>
 </div>
