--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,6 +11,31 @@
 @include bg-variant('.bg-red', $ag-red);
 @include bg-variant('.bg-orange', $ag-orange);
 
+
+@include media-breakpoint-up(sm) {
+  .card-columns {
+    column-count: 1;
+  }
+}
+
+@include media-breakpoint-up(md) {
+  .card-columns {
+    column-count: 2;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  .card-columns {
+    column-count: 3;
+  }
+}
+
+@include media-breakpoint-up(xl) {
+  .card-columns {
+    column-count: 4;
+  }
+}
+
 .ag-jumbotron {
 	@include gradient-vertical($gray-light, $ag-dark-blue, 0%, 100%)
 	color: #fff;
