--- a/src/app/opportunities/oppList.html
+++ b/src/app/opportunities/oppList.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-xs-12">
-		<div class="card-columns">
+		<div class="card-columns" infinite-scroll="nextPage()" infinite-scroll-distance="3">
 			<ag-opp-card opp="opp" ng-repeat="opp in opps"></ag-opp-card>
 		</div>
 	</div>
