Added signup page

--- a/src/app/navBar/navBar.html
+++ b/src/app/navBar/navBar.html
@@ -1,5 +1,5 @@
 <nav class="navbar ag-navbar navbar-dark bg-inverse m-b-1">
-	<ul class="nav navbar-nav ag-nav" ng-if="!searchVisible">
+	<ul class="nav navbar-nav" ng-if="!searchVisible">
 		<li class="nav-item">
 			<a href="#" class="nav-link" ng-click="toggleSearch()">
 				<i class="fa fa-search"></i>
