--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -39,7 +39,7 @@
 .ag-jumbotron {
 	// @include gradient-vertical($gray-light, $ag-dark-blue, 0%, 100%)
 	background-color: #fff;
-	text-align: center;
+	padding: 0;
 }
 
 .ag-navbar {
