--- a/src/app/opportunities/oppCard.html
+++ b/src/app/opportunities/oppCard.html
@@ -1,6 +1,9 @@
 <div class="card">
 	<div class="card-block">
-		<h4 class="card-title" ng-bind="::opp.title"></h4>
+		<h4 class="card-title">
+			<a ui-sref="opps.signup({id:opp.id})" ng-if="showLink">{{::opp.title}}</a>
+			<span ng-if="!showLink">{{::opp.title}}</span>
+		</h4>
 		<h6 class="card-subtitle text-muted" ng-bind="::opp.nonprofit.name"></h6>	
 	</div>
 	<div ng-if="opp.image" >
