--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -21,7 +21,7 @@ $input-border-radius-lg:         .3rem;
 $input-border-radius-sm:         .2rem;
 
 $font-family-sans-serif:     "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-$body-bg:                    #eee;
+$body-bg:                    #373a3c;
 
 $enable-flex: 				true;
 $fa-font-path:   "../vendor/font-awesome/fonts";
