--- a/src/app/pages/signup/signupPage.html
+++ b/src/app/pages/signup/signupPage.html
@@ -1,8 +1,21 @@
 <div class="row">
-	<div class="col-xs-12 col-md-5 col-lg-4">		
-		<ag-opp-card opp="opp" show="volunteersNeeded"></ag-opp-card>
+
+	<div class="col-xs-12">
+		<div class="card">
+			<div class="card-block">
+				<h4 class="card-title" ng-bind="::opp.title"></h4>
+				<h6 class="card-subtitle text-muted" ng-bind="::opp.nonprofit.name"></h6>	
+			</div>
+		</div>
 	</div>
-	<div class="col-xs-12 col-md-7 col-lg-8">
+
+	<div class="col-xs-12 col-md-7 col-lg-8">		
+		
+
+
+
+	</div>
+	<div class="col-xs-12 col-md-5 col-lg-4">
 		<ag-shift-list opp="opp"></ag-shift-list>
 	</div>
 </div>
